--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,12 @@ dependencies:
   firebase_auth: ^3.6.4
   firebase_core: ^1.21.0
   firebase_storage: ^10.3.6
+  flutter_riverpod: ^2.0.0-dev.9
   flutter:
     sdk: flutter
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
