--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,21 @@ dependencies:
   firebase_auth: ^3.6.4
   firebase_core: ^1.21.0
   firebase_storage: ^10.3.6
-  flutter_riverpod: ^2.0.0-dev.9
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.0.0-dev.9
+  freezed_annotation: ^2.1.0
+  image_picker: ^0.8.5+3
+  json_annotation: ^4.6.0
+  json_serializable:
 
 dev_dependencies:
+  build_runner: ^2.2.0
   change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
