Ui Changes in homeScreen

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
-</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Use</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera Library Use</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Mic Use</string>
+	<key>NSContactsUsageDescription</key>
+     <string>Contact list to chat</string>
+ </dict>
 </plist>
