--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="com.messenger.chatapp">
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
+<uses-permission android:name="android.permission.READ_CONTACTS"/>
+     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
    <application
         android:label="chat_app_riverpod"
         android:name="${applicationName}"
