--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   firebase_storage: ^10.3.6
   flutter:
     sdk: flutter
+  flutter_contacts: ^1.1.5
   flutter_riverpod: ^2.0.0-dev.9
   freezed_annotation: ^2.1.0
   image_picker: ^0.8.5+3
   json_annotation: ^4.6.0
-  json_serializable:
+
 
 dev_dependencies:
   build_runner: ^2.2.0
