--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   image_picker: ^0.8.5+3
   json_annotation: ^4.6.0
+  uuid: ^3.0.6
 
 
 dev_dependencies:
