--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.0.0-dev.9
   freezed_annotation: ^2.1.0
   image_picker: ^0.8.5+3
+  intl: ^0.17.0
   json_annotation: ^4.6.0
   uuid: ^3.0.6
 
